--- a/DocumentManagerUI/Pages/DocumantKepper.razor
+++ b/DocumentManagerUI/Pages/DocumantKepper.razor
@@ -9,8 +9,8 @@
     <TabPage Text="Videos">
 
     </TabPage>
-    <TabPage Text="Files">
-        <Files></Files>
+    <TabPage Text="Files" >
+        <Files IdDocument="@IdDocument"></Files>
     </TabPage>
 </TabControl>
 
