--- a/DocumentManagerUI/Pages/File/EditFileForm.razor
+++ b/DocumentManagerUI/Pages/File/EditFileForm.razor
@@ -122,6 +122,8 @@
 
     [Parameter]
     public FileResponse File { get; set; }
+    [Parameter]
+    public string IdDocument { get; set; }
 
     public FileObjectResponse fileTmp = new FileObjectResponse();
     string size;
