--- a/DocumentManagerUI/Pages/Document/Documents.razor
+++ b/DocumentManagerUI/Pages/Document/Documents.razor
@@ -4,7 +4,9 @@
 @using System.Threading.Tasks
 @using System.IO;
 @using System.Text.Json;
+@using Blazorise.RichTextEdit
 @using DocumentManagerUI.ModelResponse
+
 
 <EditForm Model="@document" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -16,7 +18,32 @@
 
     <div class="col-10 py-2 Foorm">
         <label class="form-label">Content</label>
-        <input @bind="document.Content" type="text" class="form-control" id="inputAddress2" placeholder="Краткое описание" />
+        <RichTextEdit @ref="richTextEditRef"
+                      Theme="RichTextEditTheme.Snow"
+                      ContentChanged="@OnContentChanged"
+                      PlaceHolder="Type your post here..."
+                      ReadOnly="@readOnly"
+                      SubmitOnEnter="false"
+                      EnterPressed="@HandleValidSubmit"
+                      ToolbarPosition="Placement.Top">
+            <Editor>@document.Content</Editor>
+            <Toolbar>
+                <RichTextEditToolbarGroup>
+                    <RichTextEditToolbarButton Action="RichTextEditAction.Bold" />
+                    <RichTextEditToolbarButton Action="RichTextEditAction.Italic" />
+                    <RichTextEditToolbarSelect Action="RichTextEditAction.Size">
+                        <RichTextEditToolbarSelectItem Value="small" />
+                        <RichTextEditToolbarSelectItem Selected />
+                        <RichTextEditToolbarSelectItem Value="large" />
+                        <RichTextEditToolbarSelectItem Value="huge">Very Big</RichTextEditToolbarSelectItem>
+                    </RichTextEditToolbarSelect>
+                    <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="ordered" />
+                    <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="bullet" />
+                </RichTextEditToolbarGroup>
+                <!-- Custom toolbar content -->
+            </Toolbar>
+        </RichTextEdit>
+        
     </div>
 
     <div class="col-10 py-2 px-0 py-0 Foorm">
@@ -113,6 +140,7 @@
 
     private async Task HandleValidSubmit()
     {
+        document.Content = await richTextEditRef.GetHtmlAsync();
         string uri = string.Concat(BaseURI, IdDocument);
         try
         {
@@ -131,5 +159,27 @@
         {
             await ShowModal(ex.Message);
         }
+    }
+
+
+    protected RichTextEdit richTextEditRef;
+    protected bool readOnly;
+    protected string contentAsHtml;
+    protected string contentAsDeltaJson;
+    protected string contentAsText;
+    protected string savedContent;
+
+    public async Task OnContentChanged()
+    {
+        contentAsHtml = await richTextEditRef.GetHtmlAsync();
+        contentAsDeltaJson = await richTextEditRef.GetDeltaAsync();
+        contentAsText = await richTextEditRef.GetTextAsync();
+
+    }
+
+    public async Task OnSave()
+    {
+        document.Content = await richTextEditRef.GetHtmlAsync();
+        await richTextEditRef.ClearAsync();
     }
 }
